added communist instrumental songs

--- a/TGC/localisation/00_events-utility.csv
+++ b/TGC/localisation/00_events-utility.csv
@@ -135,15 +135,17 @@ EVTNAME74NOTGO;No TGO found!;;;;;;;;;;;;;x
 EVTDESC74NOTGO;It seems you don't have The Grand Orchestra submod active!\n\n You can download it at \n§Bhttps://github.com/The-Grand-Combination/The-Grand-Orchestra§!;;;;;;;;;;;;;x
 EVTOPTA74NOTGO;Oh, sorry!;;;;;;;;;;;;;x
 EVTNAME75;The Grand Orchestra Menu, 2/3;;;;;;;;;;;;;x
-EVTDESC75;§BEnable generic songs:§! Enables the default playlist to play to any country—this is only for countries that do have an exclusive playlist.\n\n§BBrazilian songs enabled:§! Enables brazil-exclusive songs to play. Most brazilian songs are already integrated into the default playlist, so this will have little, but some, effect.\n\n§BBolivian songs enabled:§! Enables bolivia-exclusive songs to play.\n\n§BPeruvian songs enabled:§! Enables peru-exclusive songs to play.;;;;;;;;;;;;;x
-EVTOPTA75;Enable Western generic songs;;;;;;;;;;;;;x
-EVTOPTB75;Brazilian songs enabled;;;;;;;;;;;;;x
-EVTOPTC75;Bolivian songs enabled;;;;;;;;;;;;;x
-EVTOPTD75;Peruvian songs enabled;;;;;;;;;;;;;x
+EVTDESC75;§BToggle Generic Western Songs:§! Enables the default playlist to play to any country—this is only for countries that do have an exclusive playlist.\n\n§BToggle Brazilian Songs:§! Enables Brazil-exclusive songs to play. Most Brazilian songs are already integrated into the default playlist, so this will have little, but some, effect.\n\n§BToggle Bolivian Songs:§! Enables Bolivia-exclusive songs to play.\n\n§BToggle Peruvian Songs:§! Enables Peru-exclusive songs to play.;;;;;;;;;;;;;x
+EVTOPTA75;Toggle Generic Western Songs;;;;;;;;;;;;;x
+EVTOPTB75;Toggle Brazilian Songs;;;;;;;;;;;;;x
+EVTOPTC75;Toggle Bolivian Songs;;;;;;;;;;;;;x
+EVTOPTD75;Toggle Peruvian Songs;;;;;;;;;;;;;x
 EVTNAME76;The Grand Orchestra Menu, 3/3 ;;;;;;;;;;;;;x
-EVTDESC76;§BArgentinean songs enabled:§! Enables argentina-exclusive songs to play. Most Argentinean songs are already integrated into the default playlist, but they play less often than normal if you're not Argentina.\n\n§BEnable Japanese Playlist:§! This option will make so the exclusive Japanese Playlist plays for any country, mixed with the other songs enabled for this country.;;;;;;;;;;;;;x
-EVTOPTA76;Argentinean songs enabled;;;;;;;;;;;;;x
-EVTOPTB76;Japanese songs enabled;;;;;;;;;;;;;x
+EVTDESC76;§BToggle Argentinean Songs:§! Enables Argentina-exclusive songs to play. Most Argentinean songs are already integrated into the default playlist, but they play less often than normal if you're not Argentina.\n\n§BToggle Japanese Songs:§! This option will make so the exclusive Japanese Playlist plays for any country, mixed with the other songs enabled for this country.\n\n§BToggle Russian Songs:§! This option will make so the exclusive Russian Playlist plays for any country, mixed with the other songs enabled for this country.\n\n§BToggle Communist Songs:§! This option will make so the exclusive Communist playlist plays for any country—note that communist songs will already play by default for communist countries.;;;;;;;;;;;;;x
+EVTOPTA76;Toggle Argentinean Songs;;;;;;;;;;;;;x
+EVTOPTB76;Toggle Japanese Songs;;;;;;;;;;;;;x
+EVTOPTC76;Toggle Russian Songs;;;;;;;;;;;;;x
+EVTOPTD76;Toggle Communist Songs;;;;;;;;;;;;;x
 EVTNAME82;Renaming Menu;;;;;;;;;;;;;x
 EVTDESC82;In TGC, §BProvince and State Renamings will happen §Gautomatically§!, by default, once per year. When this happen, all provinces in the world which has avaliable renamings will be renamed accordingly to it's owner.\nIn this menu you can §Bchange the periodicity§! of the renaming, do a §Bforced renaming§! of all provinces, or §Bturn renaming completely off§!.\nThe province renaming will cause a very minor lag spike so the lowest periodicity is 6 months. For maximum perfomance turn it completely off, but having it running once a year has minimal perfomance impact.\n\nChanging the periodicity will only take effect after the next triggering, so if you were using 5 year periods it will take up to 5 years to change to the new setting.;;;;;;;;;;;;;x
 EVTOPTA82;Turn renaming ON/OFF.;;;;;;;;;;;;;x
