required changes for TGO

--- a/TGC/localisation/00_events-utility.csv
+++ b/TGC/localisation/00_events-utility.csv
@@ -125,7 +125,7 @@ EVTOPTB73;Louis-Napoleon always Coups (Default: §RDisabled§!);;;;;;;;;;;;;x
 EVTOPTC73;Bypass French Revolution Requirements (Default: §RDisabled§!);;;;;;;;;;;;;x
 EVTOPTD73;Bypass Scramble for China Requirements (Default: §RDisabled§!);;;;;;;;;;;;;x
 EVTOPTE73;Close;;;;;;;;;;;;;x
-EVTNAME74;The Grand Orchestra Menu, 1/3;;;;;;;;;;;;;x
+EVTNAME74;The Grand Orchestra Menu, 1/4;;;;;;;;;;;;;x
 EVTDESC74;§BEnable all songs:§! This option will enable all songs to play, ignoring all requirements. This includes cultural, non-cultural and war requirements, each requeriment can be re-adjusted later.\n§BBypass non-cultural requirements:§! This option will bypass non-cultural requirements like year, being a great power, industrial score, which some songs have to play.\n§BBypass warsong requirements: §!This option will make so war songs will play during peace time, the reverse is also true, as peace songs will play during war time.\Reset back to base settings:§! Resets everything back to the settings for your country at the start of the game.;;;;;;;;;;;;;x
 EVTOPTA74;Enable all songs;;;;;;;;;;;;;x
 EVTOPTB74;Bypass non-cultural requirements;;;;;;;;;;;;;x
@@ -134,18 +134,22 @@ EVTOPTD74;Reset back to base settings;;;;;;;;;;;;;x
 EVTNAME74NOTGO;No TGO found!;;;;;;;;;;;;;x
 EVTDESC74NOTGO;It seems you don't have The Grand Orchestra submod active!\n\n You can download it at \n§Bhttps://github.com/The-Grand-Combination/The-Grand-Orchestra§!;;;;;;;;;;;;;x
 EVTOPTA74NOTGO;Oh, sorry!;;;;;;;;;;;;;x
-EVTNAME75;The Grand Orchestra Menu, 2/3;;;;;;;;;;;;;x
+EVTNAME75;The Grand Orchestra Menu, 2/4;;;;;;;;;;;;;x
 EVTDESC75;§BToggle Generic Western Songs:§! Enables the default playlist to play to any country—this is only for countries that do have an exclusive playlist.\n\n§BToggle Brazilian Songs:§! Enables Brazil-exclusive songs to play. Most Brazilian songs are already integrated into the default playlist, so this will have little, but some, effect.\n\n§BToggle Bolivian Songs:§! Enables Bolivia-exclusive songs to play.\n\n§BToggle Peruvian Songs:§! Enables Peru-exclusive songs to play.;;;;;;;;;;;;;x
 EVTOPTA75;Toggle Generic Western Songs;;;;;;;;;;;;;x
 EVTOPTB75;Toggle Brazilian Songs;;;;;;;;;;;;;x
 EVTOPTC75;Toggle Bolivian Songs;;;;;;;;;;;;;x
 EVTOPTD75;Toggle Peruvian Songs;;;;;;;;;;;;;x
-EVTNAME76;The Grand Orchestra Menu, 3/3 ;;;;;;;;;;;;;x
-EVTDESC76;§BToggle Argentinean Songs:§! Enables Argentina-exclusive songs to play. Most Argentinean songs are already integrated into the default playlist, but they play less often than normal if you're not Argentina.\n\n§BToggle Japanese Songs:§! This option will make so the exclusive Japanese Playlist plays for any country, mixed with the other songs enabled for this country.\n\n§BToggle Russian Songs:§! This option will make so the exclusive Russian Playlist plays for any country, mixed with the other songs enabled for this country.\n\n§BToggle Communist Songs:§! This option will make so the exclusive Communist playlist plays for any country—note that communist songs will already play by default for communist countries.;;;;;;;;;;;;;x
+EVTNAME76;The Grand Orchestra Menu, 3/4 ;;;;;;;;;;;;;x
+EVTDESC76;§BToggle Argentinean Songs:§! Enables Argentina-exclusive songs to play. Most Argentinean songs are already integrated into the default playlist, but they play less often than normal if you're not Argentina.\n\n§BToggle Japanese Songs:§! This option will make so the exclusive Japanese Playlist plays for any country, mixed with the other songs enabled for this country.\n\n§BToggle Russian Songs:§! This option will make so the exclusive Russian Playlist plays for any country, mixed with the other songs enabled for this country.;;;;;;;;;;;;;x
 EVTOPTA76;Toggle Argentinean Songs;;;;;;;;;;;;;x
 EVTOPTB76;Toggle Japanese Songs;;;;;;;;;;;;;x
 EVTOPTC76;Toggle Russian Songs;;;;;;;;;;;;;x
-EVTOPTD76;Toggle Communist Songs;;;;;;;;;;;;;x
+EVTOPTD76;Localization;;;;;;;;;;;;;x
+EVTNAME76;The Grand Orchestra Menu, 4/4 ;;;;;;;;;;;;;x
+EVTDESC76;§BToggle Communist Songs:§! This option will make so the exclusive Communist playlist plays for any country—note that communist songs will already play by default for communist countries.\n\n§BToggle Instrumental/Vocal (Communist Songs):§! This option will swap between only playing the instrumental versions of communist songs, only playing the vocals versions of communist songs, and playing both the instrumental and vocals versions of communist songs.;;;;;;;;;;;;;x
+EVTOPTA77;Toggle Communist Songs;;;;;;;;;;;;;x
+EVTOPTB77;Toggle Instrumental/Vocal (Communist Songs);;;;;;;;;;;;;x
 EVTNAME82;Renaming Menu;;;;;;;;;;;;;x
 EVTDESC82;In TGC, §BProvince and State Renamings will happen §Gautomatically§!, by default, once per year. When this happen, all provinces in the world which has avaliable renamings will be renamed accordingly to it's owner.\nIn this menu you can §Bchange the periodicity§! of the renaming, do a §Bforced renaming§! of all provinces, or §Bturn renaming completely off§!.\nThe province renaming will cause a very minor lag spike so the lowest periodicity is 6 months. For maximum perfomance turn it completely off, but having it running once a year has minimal perfomance impact.\n\nChanging the periodicity will only take effect after the next triggering, so if you were using 5 year periods it will take up to 5 years to change to the new setting.;;;;;;;;;;;;;x
 EVTOPTA82;Turn renaming ON/OFF.;;;;;;;;;;;;;x
