--- a/TGC/localisation/00_tooltips.csv
+++ b/TGC/localisation/00_tooltips.csv
@@ -79,3 +79,6 @@ hire_general_attack_1;We will look for generals with +1 attack...               
 hire_general_attack_2;We will look for generals with +2 attack...                         §RThis will cost us between ¤50,000 and ¤2,000,000!§b;;;;;;;;;;;;
 hire_general_attack_3;We will look for generals with +3 attack...                         §RThis will cost us between ¤250,000 and ¤5,000,000!§b;;;;;;;;;;;;x
 hire_general_gacha;We will spin the wheel of §Rgacha§! and take what we get, before then wasting all of our life savings in the vain hope to get a 5 star...                                                                  §RThis will cost us ¤1,000,000 per roll!§b;;;;;;;;;;;;x
+instrumental_only;§!This is currently set to §GInstrumental Only§!. Click to swap to §RVocals Only§!.§b;;;;;;;;;;;;x
+vocal_only;§!This is currently set to §GVocals Only§!. Click to swap to §RInstrumental and Vocals§!.§b;;;;;;;;;;;;x
+instrumental_and_vocal;§!This is currently set to §GInstrumental and Vocals§!. Click to swap to §RInstrumental Only§!.§b;;;;;;;;;;;;x
