--- a/TGC/localisation/00_events-utility.csv
+++ b/TGC/localisation/00_events-utility.csv
@@ -141,11 +141,11 @@ EVTOPTB75;Toggle Brazilian Songs;;;;;;;;;;;;;x
 EVTOPTC75;Toggle Bolivian Songs;;;;;;;;;;;;;x
 EVTOPTD75;Toggle Peruvian Songs;;;;;;;;;;;;;x
 EVTNAME76;The Grand Orchestra Menu, 3/4 ;;;;;;;;;;;;;x
-EVTDESC76;§BToggle Argentinean Songs:§! Enables Argentina-exclusive songs to play. Most Argentinean songs are already integrated into the default playlist, but they play less often than normal if you're not Argentina.\n\n§BToggle Japanese Songs:§! This option will make so the exclusive Japanese Playlist plays for any country, mixed with the other songs enabled for this country.\n\n§BToggle Russian Songs:§! This option will make so the exclusive Russian Playlist plays for any country, mixed with the other songs enabled for this country.;;;;;;;;;;;;;x
+EVTDESC76;§BToggle Argentinean Songs:§! Enables Argentina-exclusive songs to play. Most Argentinean songs are already integrated into the default playlist, but they play less often than normal if you're not Argentina.\n\n§BToggle Japanese Songs:§! This option will make so the exclusive Japanese Playlist plays for any country, mixed with the other songs enabled for your country.\n\n§BToggle Russian Songs:§! This option will make so the exclusive Russian Playlist plays for any country, mixed with the other songs enabled for your country.\n\n§BToggle Polish Songs:§! This option will make so the exclusive Polish Playlist plays for any country, mixed with the other songs enabled for your country.;;;;;;;;;;;;;x
 EVTOPTA76;Toggle Argentinean Songs;;;;;;;;;;;;;x
 EVTOPTB76;Toggle Japanese Songs;;;;;;;;;;;;;x
 EVTOPTC76;Toggle Russian Songs;;;;;;;;;;;;;x
-EVTOPTD76;Localization;;;;;;;;;;;;;x
+EVTOPTD76;Toggle Polish Songs;;;;;;;;;;;;;x
 EVTNAME76;The Grand Orchestra Menu, 4/4 ;;;;;;;;;;;;;x
 EVTDESC76;§BToggle Communist Songs:§! This option will make so the exclusive Communist playlist plays for any country—note that communist songs will already play by default for communist countries.\n\n§BToggle Instrumental/Vocal (Communist Songs):§! This option will swap between only playing the instrumental versions of communist songs, only playing the vocals versions of communist songs, and playing both the instrumental and vocals versions of communist songs.;;;;;;;;;;;;;x
 EVTOPTA77;Toggle Communist Songs;;;;;;;;;;;;;x
