--- a/TGC/localisation/00_pop-culture.csv
+++ b/TGC/localisation/00_pop-culture.csv
@@ -296,6 +296,7 @@ romansh;Rhaeto-Romansh;;;;;;;;;;;;;x
 ruanda;Hutu;;;;;;;;;;;;;x
 russian;Russian;Russe;Russisch;;;;;;;;;;;x
 rutuls;Rutul;;;;;;;;;;;;;x
+ryukyuan;Ryukyuan;;;;;;;;;;;;;x
 salinero;Chediche;;;;;;;;;;;;;x
 sami;Sami;Sami;Sami;;;;;;;;;;;x
 sara;Sara-Baguirmi;;;;;;;;;;;;;x
