history fixes + changes + start of content

--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -1652,7 +1652,7 @@ PROV1650;Chiba;;;;;;;;;;;;;x
 PROV1651;Yokohama;;;;;;;;;;;;;x
 PROV1652;Iwatsuki;;;;;;;;;;;;;x
 PROV1653;Mito;;;;;;;;;;;;;x
-PROV1654;Bonin;;;;;;;;;;;;;x
+PROV1654;Bonin Islands;;;;;;;;;;;;;x
 PROV1655;Osaka;;;;;;;;;;;;;x
 PROV1656;Wakayama;;;;;;;;;;;;;x
 PROV1657;Kyoto;;;;;;;;;;;;;x
