added tsushima crisis

--- a/TGC/localisation/00_war-names.csv
+++ b/TGC/localisation/00_war-names.csv
@@ -186,6 +186,7 @@ AGRESSION_WAR_TAKE_CORE_NAME_NGF_DEN;The 2nd Schleswig War;;;;;;;;;;;;;x
 AGRESSION_WAR_TAKE_NAME;$ORDER$$FIRST$ War of $STATE$;$ORDER$$FIRST$ guerre de $STATE$;$ORDER$$FIRST$ Krieg von $STATE$;;;;;;;;;;;x
 AGRESSION_WAR_TAKE_SPHERE_NAME;$ORDER$$FIRST$–$SECOND$ War over $COUNTRY$;$ORDER$ guerre $FIRST$-$SECOND$ pour $COUNTRY$;$ORDER$$FIRST$-$SECOND$ Krieg um $COUNTRY$;;;;;;;;;;;x
 AGRESSION_WAR_TREATY_SIGNING;$FIRST$-$SECOND$ Treaty Negotiations;;;;;;;;;;;x
+AGRESSION_WAR_TSUSHIMA_INCIDENT;The $ORDER$ Tsushima Crisis;;;;;;;;;;;;;x
 AGRESSION_WAR_UNIFICATION_ANNEX_NAME;$ORDER$ $FIRST$ Liberation of $SECOND_COUNTRY$;$ORDER$ $FIRST$ libération de $SECOND_COUNTRY$;$ORDER$ $FIRST$ Befreiung von $SECOND_COUNTRY$;;;;;;;;;;;x
 AGRESSION_WAR_UNIFICATION_NAME;$ORDER$ $FIRST$ Liberation of $STATE$;$ORDER$$FIRST$ libération de $STATE$;$ORDER$$FIRST$ Befreiung von $STATE$;;;;;;;;;;;x
 AGRESSION_WAR_UNIFICATION_NAME_NGF_DEN;The 2nd Schleswig War;;;;;;;;;;;;;x
@@ -458,6 +459,7 @@ NORMAL_WAR_TAKE_NAME_USA_MEX_MEX;$ORDER$American Invasion of Mexico;$ORDER$ guer
 NORMAL_WAR_TAKE_NAME_USA_MEX_USA;$ORDER$Mexican–American War;$ORDER$ guerre mexicano-américaine;$ORDER$Mexikanisch-Amerikanischer Krieg;;;;;;;;;;;x
 NORMAL_WAR_TAKE_SPHERE_NAME;$ORDER$$COUNTRY$ War;$ORDER$ guerre de $COUNTRY$;$ORDER$$COUNTRY$ Krieg;;;;;;;;;;;x
 NORMAL_WAR_TREATY_SIGNING;$FIRST$-$SECOND$ Treaty Negotiations;;;;;;;;;;;x
+NORMAL_WAR_TSUSHIMA_INCIDENT;The $ORDER$ Tsushima Crisis;;;;;;;;;;;;;x
 NORMAL_WAR_UNIFICATION_ANNEX_NAME;$ORDER$ $FIRST$ Liberation of $SECOND_COUNTRY$;$ORDER$ $FIRST$ libération de $SECOND_COUNTRY$;$ORDER$ $FIRST$ Befreiung von $SECOND_COUNTRY$;;;;;;;;;;;x
 NORMAL_WAR_UNIFICATION_NAME;$ORDER$ $FIRST$ Liberation of $STATE$;$ORDER$$FIRST$ libération de $STATE$;$ORDER$$FIRST$ Befreiung von $STATE$;;;;;;;;;;;x
 NORMAL_WAR_UNIFICATION_NAME_NGF_DEN;The 2nd Schleswig War;;;;;;;;;;;;;x
