positioning + name fixes

--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -1084,10 +1084,10 @@ PROV1082;Haishenwai;;;;;;;;;;;;;x
 PROV1083;Boli;;;;;;;;;;;;;x
 PROV1084;Utchan;;;;;;;;;;;;;x
 PROV1085;Hailanpao;;;;;;;;;;;;;x
-PROV1086;Pogobi;;;;;;;;;;;;;x
-PROV1087;Otomari;;;;;;;;;;;;;x
+PROV1086;Pogibi;;;;;;;;;;;;;x
+PROV1087;Korsakov;;;;;;;;;;;;;x
 PROV1088;Shumshu;;;;;;;;;;;;;x
-PROV1089;Etorofu;;;;;;;;;;;;;x
+PROV1089;Iturup;;;;;;;;;;;;;x
 PROV1090;Tiflis;;;;;;;;;;;;;x
 PROV1091;Tskhinval;;;;;;;;;;;;;x
 PROV1092;Kutais;;;;;;;;;;;;;x
