--- a/TGC/localisation/00_map-regions.csv
+++ b/TGC/localisation/00_map-regions.csv
@@ -342,7 +342,7 @@ RUS_1074;Kamchatka;;;;;;;;;;;;;x
 RUS_1075;Irkutsk;;;;;;;;;;;;;x
 RUS_1079;Transbaikal;;;;;;;;;;;;;x
 CHI_1082;Guanwai;;;;;;;;;;;;;x
-JAP_1086;Sakhalin;;;;;;;;;;;;;x
+RUS_1086;Sakhalin;;;;;;;;;;;;;x
 JAP_1088;Ezo;;;;;;;;;;;;;x
 RUS_1090;Tiflis;;;;;;;;;;;;;x
 AST_1097;Southern Melanesia;;;;;;;;;;;;;x
