last round of new provs

--- a/TGC/localisation/00_countries-names.csv
+++ b/TGC/localisation/00_countries-names.csv
@@ -542,7 +542,7 @@ IZH;Ingria;;;;;;;;;;;;;x
 #JJ9;Mutsuura;;;;;;;;;;;;;x
 #JK0;Ogino Yamanaka;;;;;;;;;;;;;x
 #JK1;Okabe;;;;;;;;;;;;;x
-#JK2;Isekaki;;;;;;;;;;;;;x
+#JK2;Isesaki;;;;;;;;;;;;;x
 #JK3;Takasaki;;;;;;;;;;;;;x
 #JK4;Yoshii;;;;;;;;;;;;;x
 #JK5;Obata;;;;;;;;;;;;;x
