--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -3821,7 +3821,7 @@ PROV3819;Ogino Yamanaka;;;;;;;;;;;;;x
 PROV3820;Odawara;;;;;;;;;;;;;x
 PROV3821;Yokosuka;;;;;;;;;;;;;x
 PROV3822;Okabe;;;;;;;;;;;;;x
-PROV3823;Isekaki;;;;;;;;;;;;;x
+PROV3823;Isesaki;;;;;;;;;;;;;x
 PROV3824;Maebashi;;;;;;;;;;;;;x
 PROV3825;Takasaki;;;;;;;;;;;;;x
 PROV3826;Yoshii;;;;;;;;;;;;;x
@@ -3884,23 +3884,23 @@ PROV3882;Maui;;;;;;;;;;;;;x
 PROV3883;Kaua'i;;;;;;;;;;;;;x
 PROV3884;Montignoso;;;;;;;;;;;;;x
 PROV3885;Fivizzano;;;;;;;;;;;;;x
-PROV3886;Huarhuar Co;;;;;;;;;;;;;x
-PROV3887;Tratayén;;;;;;;;;;;;;x
-PROV3888;An Aike;;;;;;;;;;;;;x
-PROV3889;Tamel Aike;;;;;;;;;;;;;x
-PROV3890;Koluel Kayke;;;;;;;;;;;;;x
-PROV3891;Kübübü;;;;;;;;;;;;;x
-PROV3892;Punta Villarino;;;;;;;;;;;;;x
-PROV3893;Pilo Lil;;;;;;;;;;;;;x
-PROV3894;Nahuel Huapi;;;;;;;;;;;;;x
-PROV3895;Covunco;;;;;;;;;;;;;x
-PROV3896;Naupa Huen;;;;;;;;;;;;;x
-PROV3897;Pelicurá;;;;;;;;;;;;;x
-PROV3898;Aleksandrovskoye;;;;;;;;;;;;;x
-PROV3899;Bashanta;;;;;;;;;;;;;x
-PROV3900;Jejsku;;;;;;;;;;;;;x
-PROV3901;Kavkazkaya;;;;;;;;;;;;;x
-PROV3902;Lazarevskoye;;;;;;;;;;;;;x
+PROV3886;Dejima;;;;;;;;;;;;;x
+PROV3887;Kusatsu;;;;;;;;;;;;;x
+PROV3888;Agatsuma;;;;;;;;;;;;;x
+PROV3889;Nasu;;;;;;;;;;;;;x
+PROV3890;Honjoo;;;;;;;;;;;;;x
+PROV3891;Oora;;;;;;;;;;;;;x
+PROV3892;Nakane;;;;;;;;;;;;;x
+PROV3893;Fukatsu;;;;;;;;;;;;;x
+PROV3894;Komagome;;;;;;;;;;;;;x
+PROV3895;Haga;;;;;;;;;;;;;x
+PROV3896;Koshiki Misato;;;;;;;;;;;;;x
+PROV3897;Oonuki;;;;;;;;;;;;;x
+PROV3898;Takasaki;;;;;;;;;;;;;x
+PROV3899;Hatake;;;;;;;;;;;;;x
+PROV3900;Hachiooji;;;;;;;;;;;;;x
+PROV3901;Funabashi-Kashiwa;;;;;;;;;;;;;x
+PROV3902;Ryugasaki;;;;;;;;;;;;;x
 PROV3903;Krasnaya Polyana;;;;;;;;;;;;;x
 PROV3904;Pitsunda;;;;;;;;;;;;;x
 PROV3905;Psukhu;;;;;;;;;;;;;x
