--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -1638,7 +1638,7 @@ PROV1636;Taejon;;;;;;;;;;;;;x
 PROV1637;Cheju;;;;;;;;;;;;;x
 PROV1638;Hiroshima;;;;;;;;;;;;;x
 PROV1639;Okayama;;;;;;;;;;;;;x
-PROV1640;Yamaguchi;;;;;;;;;;;;;x
+PROV1640;Hagi;;;;;;;;;;;;;x
 PROV1641;Matsue;;;;;;;;;;;;;x
 PROV1642;Hakodate;;;;;;;;;;;;;x
 PROV1643;Sapporo;;;;;;;;;;;;;x
@@ -3884,7 +3884,7 @@ PROV3882;Maui;;;;;;;;;;;;;x
 PROV3883;Kaua'i;;;;;;;;;;;;;x
 PROV3884;Montignoso;;;;;;;;;;;;;x
 PROV3885;Fivizzano;;;;;;;;;;;;;x
-PROV3886;Dejima;;;;;;;;;;;;;x
+PROV3886;Kazo;;;;;;;;;;;;;x
 PROV3887;Kusatsu;;;;;;;;;;;;;x
 PROV3888;Agatsuma;;;;;;;;;;;;;x
 PROV3889;Nasu;;;;;;;;;;;;;x
