fixed map mistake

--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -3627,7 +3627,7 @@ PROV3625;Hirao;;;;;;;;;;;;;x
 PROV3626;Tsuwano;;;;;;;;;;;;;x
 PROV3627;Hamada;;;;;;;;;;;;;x
 PROV3628;Oda;;;;;;;;;;;;;x
-PROV3629;Matsue;;;;;;;;;;;;;x
+PROV3629;Yonago;;;;;;;;;;;;;x
 PROV3630;Hirose;;;;;;;;;;;;;x
 PROV3631;Oki;;;;;;;;;;;;;x
 PROV3632;Tottori;;;;;;;;;;;;;x
