added myakonojo flags + some flavor

--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1642,3 +1642,7 @@ promulgating_simplified_chinese;Promulgating Simplified Chinese;;;;;;;;;;;;;x
 promulgating_simplified_chinese_desc;We have successfully shifted to vernacular Chinese—now, we are currently in the process of compiling a list of various informal simplifications of characters made by individuals, as well as ways in which we can further simplify, merge, and consolidate characters.;;;;;;;;;;;;;x
 simplified_chinese;Simplified Chinese;;;;;;;;;;;;;x
 simplified_chinese_desc;Simplified Chinese is a combination of our successful efforts to shift to vernacular Chinese and simplify Chinese characters. However, it is more than just that—it is also a symbol of the new China, a mighty and modern nation, built by the common people.;;;;;;;;;;;;;x
+sachishima_earthquake_devastation;Legacy of the Yaeyama Earthquake;;;;;;;;;;;;;x
+sachishima_earthquake_devastation_desc;In 1771, the Great Yaeyama Earthquake struck these islands, with the resulting tsunami salinating the soil significantly. Combined with the high taxes historically imposed here by the Ryukyu Kingdom, famines are frequent and the overall situation is poor.;;;;;;;;;;;;;x
+satsuma_clan_branch_administration;Clan Branch Administration;;;;;;;;;;;;;x
+satsuma_clan_branch_administration_desc;Much of our domain is administered by branches of our clan—this makes it difficult for us to exert direct control over many of our lands, but it does make local administrations more efficient.;;;;;;;;;;;;;x
