--- a/TGC/localisation/00_countries-names.csv
+++ b/TGC/localisation/00_countries-names.csv
@@ -350,6 +350,7 @@ JAS;Jaisalmer;Jaisalmer;Jaisalmer;;;;;;;;;;;x
 JAV;Java;Java;Java;;;;;;;;;;;x
 JBJ;Zakatal;;;;;;;;;;;;;x
 JEY;Jeypura;;;;;;;;;;;;;x
+JJZ;Junior Jüz;;;;;;;;;;;;;x
 JLS;Jalisco;;;;;;;;;;;;;x
 JOD;Jodhpur;Jodhpur;Jodhpur;;;;;;;;;;;x
 JOH;Johor;;;;;;;;;;;;;x
@@ -471,6 +472,7 @@ MHR;Mahra;;;;;;;;;;;;;x
 MIG;Mingrelia;;;;;;;;;;;;;x
 MIZ;Mizoram;;;;;;;;;;;;;x
 MJG;Mengjiang;;;;;;;;;;;;;x
+MJZ;Middle Jüz;;;;;;;;;;;;;x
 MKN;Mukriyan;;;;;;;;;;;;;x
 MKU;Shakak;;;;;;;;;;;;;x
 MLD;Maldives;;;;;;;;;;;;;x
@@ -651,6 +653,7 @@ SIK;Sikkim;Sikkim;Sikkim;;;;;;;;;;;x
 SIN;Sindh;Sindh;Sindh;;;;;;;;;;;x
 SIS;Sistan;;;;;;;;;;;;;x
 SJN;San Juan;;;;;;;;;;;x
+SJZ;Senior Jüz;;;;;;;;;;;x
 SLA;Selimbau;;;;;;;;;;;;;x
 SLE;Sierra Leone;;;;;;;;;;;;;x
 SLG;Selangor;;;;;;;;;;;;;x
