--- a/TGC/localisation/00_events_0500000.csv
+++ b/TGC/localisation/00_events_0500000.csv
@@ -329,19 +329,19 @@ EVTOPTB500102;Mohyla;;;;;;;;;;;;;x
 EVTOPTC500102;Swiatopelk-Mirski;;;;;;;;;;;;;x
 EVTOPTD500102;Biron;;;;;;;;;;;;;x
 EVTOPTE500102;None of these candidates are suitable as well.;;;;;;;;;;;;;x
-#EVTDESC5000160;After the Revolution in Berlin succeeded during the Spring of Nations, newly freed Polish prisoners joined the Berlin Home Guard by founding a Polish Legion, and were armed with weapons from the Prussian arsenal. A Pole waved the black, red, and gold flag of the German Revolution and the prisoners were celebrated by the public. Speeches were made about a joint fight against the Russians for a free and united Germany and an independent Poland. Many were under the impression that all of Prussia wanted a free Poland to serve as a shield against Russia and that the Polish question would soon be resolved. However, after a while, the atmosphere among the Germans and a portion of the Jewish population began to change dramatically at the first signs of violence by the Poles. In a matter of days revolutionary sentiment had risen throughout the entire Duchy of Posen. Polish nobility and peasantry took up arms, preparing for a confrontation with the Prussian Army, Prussian symbols were torn down, and in couple of places fighting erupted against German colonists. The revolt had begun.;;;;;;;;;;;;;x
-#EVTNAME5000160;The Greater Poland Uprising;;;;;;;;;;;;;x
-#EVTOPTA5000160;Death to the rebels!;;;;;;;;;;;;;x
-#EVTOPTB5000170;It isn't worth the fight.;;;;;;;;;;;;;x
-#EVTOPTC5000170;Onwards to Poznan!;;;;;;;;;;;;;x
-#EVTDESC5000190;After our Polish subjects raised the banner of rebellion, the old territories of the Grand Duchy quickly became restless, demanding their own concessions. Today, these have finally tipped over, and the result is clear - a full-scale rebellion, spanning from Palanga on the Baltic Sea, to Kyiv, the largest city in Ukraine. Even in Byelorussia and Latvia, the flames of rebellion grow ever higher, and our officers in the area demand an immediate response to these traitors.\n The goal of this great rebellion in our western territories is clear - the reversal of the Polish Partitions and the restoration of the Polish-Lithuanian Commonwealth to the European scene. The General-Gubernator of the Northwestern Krai (Vilna, Kovno, Grodno, Minsk, Mogilev, and Vitebsk) has requested immediate backup to crush these fools.;;;;;;;;;;;;;x
-#EVTNAME5000190;The Uprising Spreads to the Northwest;;;;;;;;;;;;;x
-#EVTOPTA5000190;The situation is deteriorating, and deteriorating fast.;;;;;;;;;;;;;x
-#EVTOPTB5000190;Onwards to Lithuania!;;;;;;;;;;;;;x
-#EVTDESC5000200;With both the core lands of the Kingdom of Poland and the Grand Duchy in full revolt, other malcontents have seen fit to join these traitors in their foolish rebellion to restore the old Commonwealth. Our garrisons in West Ukraine have been quickly overwhelmed, and the General-Gubernator of the Southwestern Krai (Kiev, Podolia and Volhynia) has requested immediate support to crush this rebellion.;;;;;;;;;;;;;x
-#EVTNAME5000200;The Uprising Spreads to the Southwest;;;;;;;;;;;;;x
-#EVTOPTA5000200;Death to the rebels! Long live the Tsar!;;;;;;;;;;;;;x
-#EVTOPTB5000200;This is unwinnable. We must let them go.;;;;;;;;;;;;;x
+XEVTDESC5000160;After the Revolution in Berlin succeeded during the Spring of Nations, newly freed Polish prisoners joined the Berlin Home Guard by founding a Polish Legion, and were armed with weapons from the Prussian arsenal. A Pole waved the black, red, and gold flag of the German Revolution and the prisoners were celebrated by the public. Speeches were made about a joint fight against the Russians for a free and united Germany and an independent Poland. Many were under the impression that all of Prussia wanted a free Poland to serve as a shield against Russia and that the Polish question would soon be resolved. However, after a while, the atmosphere among the Germans and a portion of the Jewish population began to change dramatically at the first signs of violence by the Poles. In a matter of days revolutionary sentiment had risen throughout the entire Duchy of Posen. Polish nobility and peasantry took up arms, preparing for a confrontation with the Prussian Army, Prussian symbols were torn down, and in couple of places fighting erupted against German colonists. The revolt had begun.;;;;;;;;;;;;;x
+XEVTNAME5000160;The Greater Poland Uprising;;;;;;;;;;;;;x
+XEVTOPTA5000160;Death to the rebels!;;;;;;;;;;;;;x
+XEVTOPTB5000170;It isn't worth the fight.;;;;;;;;;;;;;x
+XEVTOPTC5000170;Onwards to Poznan!;;;;;;;;;;;;;x
+XEVTDESC5000190;After our Polish subjects raised the banner of rebellion, the old territories of the Grand Duchy quickly became restless, demanding their own concessions. Today, these have finally tipped over, and the result is clear - a full-scale rebellion, spanning from Palanga on the Baltic Sea, to Kyiv, the largest city in Ukraine. Even in Byelorussia and Latvia, the flames of rebellion grow ever higher, and our officers in the area demand an immediate response to these traitors.\n The goal of this great rebellion in our western territories is clear - the reversal of the Polish Partitions and the restoration of the Polish-Lithuanian Commonwealth to the European scene. The General-Gubernator of the Northwestern Krai (Vilna, Kovno, Grodno, Minsk, Mogilev, and Vitebsk) has requested immediate backup to crush these fools.;;;;;;;;;;;;;x
+XEVTNAME5000190;The Uprising Spreads to the Northwest;;;;;;;;;;;;;x
+XEVTOPTA5000190;The situation is deteriorating, and deteriorating fast.;;;;;;;;;;;;;x
+XEVTOPTB5000190;Onwards to Lithuania!;;;;;;;;;;;;;x
+XEVTDESC5000200;With both the core lands of the Kingdom of Poland and the Grand Duchy in full revolt, other malcontents have seen fit to join these traitors in their foolish rebellion to restore the old Commonwealth. Our garrisons in West Ukraine have been quickly overwhelmed, and the General-Gubernator of the Southwestern Krai (Kiev, Podolia and Volhynia) has requested immediate support to crush this rebellion.;;;;;;;;;;;;;x
+XEVTNAME5000200;The Uprising Spreads to the Southwest;;;;;;;;;;;;;x
+XEVTOPTA5000200;Death to the rebels! Long live the Tsar!;;;;;;;;;;;;;x
+XEVTOPTB5000200;This is unwinnable. We must let them go.;;;;;;;;;;;;;x
 EVTDESC500600;Foreign Aid;;;;;;;;;;;;;x
 EVTNAME500600;We can request aid from friendly Great Powers.;;;;;;;;;;;;;x
 EVTOPTA500600;Let us nationalize foreign assets.;;;;Déjanos nacionalizar activos extranjeros.;;;;;;;;;x
