fixed cossack loc bug + paraguay govswap issue

--- a/TGC/localisation/00_military-traits.csv
+++ b/TGC/localisation/00_military-traits.csv
@@ -40,7 +40,7 @@ competent;Competent §m+1 Attack +1 Defense§!;Compétent;Kompetent;;;;;;;;;;;x
 confident;Confident §m+1 Attack§!;Confiant;Sicher;;;;;;;;;;;x
 coolminded;Cool-minded §M+2 Defense§!;Serein;Bedachtsam;;;;;;;;;;;x
 corrupt;Corrupt §R-3 Attack -3 Defense§!;Corrompu;Korrupt;;;;;;;;;;;x
-cossack;Cossack §G+3 Attack §m+1 Defense§!;;;;;;;;;;;;;x
+cossack_t;Cossack §G+3 Attack §m+1 Defense§!;;;;;;;;;;;;;x
 courteous;Courteous §m+1 Defense§!;;;;;;;;;;;;;x
 coward;Coward §R-1 Attack -2 Defense§!;Couard;Kleinmütig;;;;;;;;;;;x
 craven;Craven §R-2 Attack -3 Defense§!;Veule;Mutlos;;;;;;;;;;;x
