--- a/TGC/localisation/00_war-cb.csv
+++ b/TGC/localisation/00_war-cb.csv
@@ -417,8 +417,8 @@ war_of_the_americas_ussa_desc;We can't tolerate such a rival sharing the same co
 war_of_the_americas_ussa_setup;Dismantle the USA;;;;;;;;;;;;;x
 war_of_the_americas_ussa_short;Dismantle the USA;;;;;;;;;;;;;x
 war_reparations;Reparations;;;;;;;;;;;;;x
-war_reparations_desc;Demand Â§YreparationsÂ§W from $RECIPIENT$.;;;;;;;;;;;;;x
-war_reparations_setup;Demand Â§YreparationsÂ§W from $RECIPIENT$.;;;;;;;;;;;;;x
+war_reparations_desc;Demand §Yreparations§W from $RECIPIENT$.;;;;;;;;;;;;;x
+war_reparations_setup;Demand §Yreparations§W from $RECIPIENT$.;;;;;;;;;;;;;x
 war_reparations_short;Demand Reparations;;;;;;;;;;;;;x
 webster_ashburton_cb;Secure the Frontier;;;;;;;;;;;;;x
 webster_ashburton_cb_desc;Enforce our views on the border between Canada and the United States.;;;;;;;;;;;;;x
