--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1640,3 +1640,11 @@ cisplatina_is_ours;Cisplatina is ours!;;;;;;;;;;;;;;
 yinxu_excavations;The Cradle of Chinese Civilization;;;;;;;;;;;;;x 
 recently_hired_general;Recently Hired General;;;;;;;;;;;;;;x
 recently_hired_general_desc;We have recently hired a foreign general, and must wait a bit for willing candidates before hiring another.;;;;;;;;;;;;;;x
+sologne_development;Sologne Development;;;;;;;;;;;;;x
+sologne_development_desc;This province is undergoing a state-sponsored reclamation. Marshes are being drained and pine forests planted, reducing disease and turning once-impoverished land into a productive source of timber.;;;;;;;;;;;;;x
+landes_pine_forest;Landes Pine Forest;;;;;;;;;;;;;x
+landes_pine_forest_desc;What was once unproductive heathland is now being systematically transformed into a vast pine forest. This ambitious state project has changed the landscape and the local economy, focusing it on timber production.;;;;;;;;;;;;;x
+camargue_reclamation;Camargue Reclamation;;;;;;;;;;;;;x
+camargue_reclamation_desc;Systematic irrigation and drainage projects are taming the wild Rhône delta. The control of malaria has made the province healthier, while the reclaimed land is now used for new industries like rice cultivation and saltworks.;;;;;;;;;;;;;x
+corsica_colonisation_forests;Colonisation Forests;;;;;;;;;;;;;x
+corsica_colonisation_forests_desc;The state has introduced large pine plantations to stabilize the soil and prevent erosion. However, these "Colonisation Forests" are deeply resented by local shepherds and farmers whose traditional grazing lands have been expropriated, causing unrest.;;;;;;;;;;;;;x
