added post civil war event to change capital

--- a/TGC/localisation/00_events_0500000.csv
+++ b/TGC/localisation/00_events_0500000.csv
@@ -1586,6 +1586,10 @@ EVTOPTA993894;This is troubling...;;;;;;;;;;;;;x
 EVTDESC993895;With our victory in the Civil War our control of Mexico is now uncontested. As our troops march into Mexico City in a parade reminiscent of one commemorating our victory in the first Mexican-American war, it is clearer than ever that the people of Mexico resent our presence. Still, their fighting spirit is broken, for now.\n\nPerhaps, with time, they will learn to be American citizens.;;;;;;;;;;;;;x
 EVTNAME993895;Civil War in Mexico Has Ended;;;;;;;;;;;;;x
 EVTOPTA993895;They will learn not to rebel again..;;;;;;;;;;;;;x
+EVTDESC993896;After the Civil War, some representatives have suggested that we move our capital westward, to St. Louis to represent unity between North and South. Further, they believe it to be the most obvious place for the center of the modern, growing United States, a "great vitalizing heart of the Republic.” However, others have pointed out the logistical difficulties in such a move, and are pushing for the capital to remain in DC.;;;;;;;;;;;;;x
+EVTNAME993896;A New Capital?;;;;;;;;;;;;;x
+EVTOPTA993896;We will stay in DC.;;;;;;;;;;;;;x
+EVTOPTB993896;A growing nation needs a new capital—St. Louis.;;;;;;;;;;;;;x
 EVTOPTB993895;This is an opportune moment to loosen the Hispanic and Catholic hold on the north.;;;;;;;;;;;;;x
 EVTDESC993897;Holy shit what are you doing AI USA?;;;;;;;;;;;;;x
 EVTNAME993897;Out of Africa;;;;;;;;;;;;;x
