--- a/TGC/localisation/00_events_0500000.csv
+++ b/TGC/localisation/00_events_0500000.csv
@@ -1589,7 +1589,7 @@ EVTOPTA993895;They will learn not to rebel again..;;;;;;;;;;;;;x
 EVTDESC993896;After the Civil War, some representatives have suggested that we move our capital westward, to St. Louis to represent unity between North and South. Further, they believe it to be the most obvious place for the center of the modern, growing United States, a "great vitalizing heart of the Republic.” However, others have pointed out the logistical difficulties in such a move, and are pushing for the capital to remain in DC.;;;;;;;;;;;;;x
 EVTNAME993896;A New Capital?;;;;;;;;;;;;;x
 EVTOPTA993896;We will stay in DC.;;;;;;;;;;;;;x
-EVTOPTB993896;A growing nation needs a new capital—St. Louis.;;;;;;;;;;;;;x
+EVTOPTB993896;A growing nation needs a new capital—"the Heart of the Heartland," St. Louis.;;;;;;;;;;;;;x
 EVTOPTB993895;This is an opportune moment to loosen the Hispanic and Catholic hold on the north.;;;;;;;;;;;;;x
 EVTDESC993897;Holy shit what are you doing AI USA?;;;;;;;;;;;;;x
 EVTNAME993897;Out of Africa;;;;;;;;;;;;;x
